# pseudo-diloco

./: .gitignore  README.md  pyproject.toml
configs/: resnet-18-cifar-10-baseline.yml  resnet-18-cifar-10-diloco.yml  resnet-18-cifar-10-one-worker.yml  resnet-18-cifar-10.yml
experiments/: resnet_18_cifar_10_baseline.py  resnet_18_cifar_10_diloco.py  resnet_18_cifar_10_one_replica.py  resnet_18_cifar_10_one_worker.py  resnet_one_worker_hyperparam_sweep.py
scripts/: partition_cifar10.py
src/pseudo_diloco/: all_reduce.py  config.py  datasets.py  pseudo_diloco.py  simple.py  train.py  train_resnet.py  utils.py
src/pseudo_diloco/models/: resnet.py
src/pseudo_diloco/partitioning/: embeddings.py
