[project]
name = "pseudo-diloco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "bhaveshkalisetti@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.uv]
venv = ".venv"
python = "3.10.15"
