[project]
name = "pseudo-diloco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "bhaveshkalisetti@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.uv]
